Row8 is completed

--- a/index.html
+++ b/index.html
@@ -447,6 +447,37 @@
     </div>
    </div>
     <!-- row 7 is end -->
+       <!-- row 8 is start -->
+       <div class="row6">
+        <div class="container">
+          <div class="contact_section">
+            <div class="row">
+              <div class="col-md-8 offset-2 shadow p-5">
+                <form action=""></form>
+                <div class="form-iten">
+                  <label for="" class="form-label">Name</label>
+                  <input type="text" class="form-control">
+                </div>
+                <div class="form-iten">
+                  <label for="" class="form-label">Email</label>
+                  <input type="email" class="form-control">
+                </div>
+                <div class="form-iten">
+                  <label for="" class="form-label">Message</label>
+                 <textarea name="" id="" cols="30" role="5" class="form-control"></textarea>
+                </div>
+                <div class="form-iten">
+                 <br>
+                 <button class="btn btn-primary">sumbit</button>
+                </div>
+                
+              </div>
+              <div class="col-md-4"></div>
+            </div>
+          </div>
+        </div>
+       </div>
+          <!-- row 8 is end -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
